--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
         </div>
-        <a ref="$" class="btn">See more</a>
+        <a ref="#" class="btn">See more</a>
     </div>
 </div>
 
