--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="layer">
                     <h3>Yoga classes</h3>
                     <P>This app connected you to people around.</P>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    <a href="/Yoga.html"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
