--- a/Yoga.html
+++ b/Yoga.html
@@ -1,18 +1,18 @@
 <!-- This is one possible solution -->
-<h1>It's My Birthday!</h1>
-<h2>On the 12th May</h2>
+<h1>Online Yoga sessions</h1>
+<h2>15th-16th Feb 2025</h2>
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-  alt="purple birthday cake with candles" />
+<img src="Yoga.png"
+  alt="Yoga classes flyer" />
 
 <h3>What to bring:</h3>
 <ul>
-  <li>Baloons (I love baloons)</li>
-  <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
+  <li>A Yoga mat </li>
+  <li>Yoga props (I would recommend one)</li>
+  <li>A light meal an houre before</li>
 </ul>
 
 <h3>This is where you need to go:</h3>
 <a
-  href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
-  map link</a>
+  href="https://meet.google.com/svc-fzds-zcm">Google
+  meet link</a>
