--- a/Yoga.html
+++ b/Yoga.html
@@ -1,18 +1,20 @@
 <!-- This is one possible solution -->
+<link rel="stylesheet" href="yoga.css">
 <h1>Online Yoga sessions</h1>
 <h2>15th-16th Feb 2025</h2>
+<div id="header">
 
 <img src="Yoga.png"
   alt="Yoga classes flyer" />
 
-<h3>What to bring:</h3>
+</div>
+<h3 id="item">What to bring:</h3>
 <ul>
   <li>A Yoga mat </li>
   <li>Yoga props (I would recommend one)</li>
   <li>A light meal an houre before</li>
 </ul>
 
-<h3>This is where you need to go:</h3>
-<a
-  href="https://meet.google.com/svc-fzds-zcm">Google
-  meet link</a>
+
+<h3 class="Meeting">This is where you need to go:</h3>
+<a class="link" href="https://meet.google.com/svc-fzds-zcm">Sri Sri Yoga Classes</a>
