--- a/Yoga.html
+++ b/Yoga.html
@@ -1,20 +1,28 @@
-<!-- This is one possible solution -->
 <link rel="stylesheet" href="yoga.css">
 <h1>Online Yoga sessions</h1>
 <h2>15th-16th Feb 2025</h2>
+
 <div id="header">
-
-<img src="Yoga.png"
-  alt="Yoga classes flyer" />
-
+  <img src="Yoga.png" alt="Yoga classes flyer" />
 </div>
+
 <h3 id="item">What to bring:</h3>
 <ul>
-  <li>A Yoga mat </li>
+  <li>A Yoga mat</li>
   <li>Yoga props (I would recommend one)</li>
-  <li>A light meal an houre before</li>
+  <li>A light meal an hour before</li>
 </ul>
-
 
 <h3 class="Meeting">This is where you need to go:</h3>
 <a class="link" href="https://meet.google.com/svc-fzds-zcm">Sri Sri Yoga Classes</a>
+
+<!-- Motivational Quote Section -->
+<div class="quote">
+  <p>"Yoga is the journey of the self, through the self, to the self." - The Bhagavad Gita</p>
+</div>
+
+<!-- Call to Action Button -->
+<a href="https://srisrischoolofyoga.org/in/" class="cta">Join Us Today</a>
+
+<!-- Lotus Flower Decorative Element -->
+<div id="lotus"></div>
