--- a/Yoga.html
+++ b/Yoga.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="yoga.css">
 <h1>Online Yoga sessions</h1>
-<h2>15th-16th Feb 2025</h2>
+<h2>24 Feb 2025 - 14 Mar 2025
+  6:00 PM - 7:00 PM</h2>
 
 <div id="header">
   <img src="Yoga.png" alt="Yoga classes flyer" />
@@ -13,8 +14,8 @@
   <li>A light meal an hour before</li>
 </ul>
 
-<h3 class="Meeting">This is where you need to go:</h3>
-<a class="link" href="https://meet.google.com/svc-fzds-zcm">Sri Sri Yoga Classes</a>
+<h3 class="Meeting">register here:</h3>
+<a class="link" href="https://www.artofliving.online/registration.php?event_id=851361&prefill=xEPlxH0B8eVYBdycvxdKhw.C5b-jsu_OqblPTYTcSvLkUmXt5R0tGcaqMQaf1yWR5Q&">Sri Sri Yoga Classes</a>
 
 <!-- Motivational Quote Section -->
 <div class="quote">
