--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p>AI Developer</p>
+            <p>Electrical and Machine Learning Engineer, Writer, and Yoga Teacher</p>
             <h1>Hi, I'm <span>Ravi</span> <br> from India</h1> 
         </div>    
     </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>I am a yoga teacher with a penchant for writing. I am also a skilled AI developer. </p>
+                <p>I’m a yoga teacher who loves writing fiction and self-help books. I also work as an Electrical and Machine Learning Engineer, sharing insights through blogs on the latest in AI. My passion lies in blending wellness, creativity, and technology to inspire others. </p>
 
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -59,14 +59,14 @@
                     <ul>
                         <li><span>Product Engineer</span><br>BorgWarner</li>
                         <li><span>Research Engineer</span><br>Eaton</li>
-                        <li><span>Engineer</span><br>ExxonMobil</li>
+                        <li><span>Electrical Engineer</span><br>ExxonMobil</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
                         <li><span>Master's in AI</span><br>Woolf</li>
-                        <li><span>MTECH</span><br>IISc</li>
-                        <li><span>BTECH</span><br>NITW</li>
+                        <li><span>MTECH in Electrical Engineering</span><br>IISc</li>
+                        <li><span>BTECH in Electrical Engineering</span><br>NITW</li>
                     </ul>
                 </div>
 
